--- a/lit/blog/templates/blog/post_detail.html
+++ b/lit/blog/templates/blog/post_detail.html
@@ -1,20 +1,20 @@
 {%extends "blog/base.html" %}
 {% block content %}
-<section class="resume-section" id="experience">
-        <div class="resume-section-content">
-          <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">{{post.title}}</h3>
-            <div class="subheading mb-3"><a href="#">{{post.author}}</a></div>
-            <p>{{post.content}}</p>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">{{post.date|date:"F d, Y"}}</span></div>
-          {% if post.author == user %}
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 card mb-5  mt-5 left  top">
+      <div class="card-body">
+        <h2>{% block title %} {{ object.title }} {% endblock title %}</h2>
+        <p class=" text-muted">{{ post.author }} | {{ post.date }}</p>
+        <p class="card-text ">{{ object.content | safe }}</p>
+      </div>
+      {% if post.author == user %}
             <div>
             <a class="btn btn-secondary btn-sm mt-1 mb-5 ml-1" href="{% url 'post-update' object.id %}">Update</a>
             <a class="btn btn-danger btn-sm mt-1 mb-5 ml-1" href="{% url 'post-delete' object.id %}">Delete</a>
             </div>
-          {% endif %}
-          </div>
-
+      {% endif %}
+    </div>
+  </div>
+</div>
 {% endblock content %}
