--- a/events/templates/events/events.html
+++ b/events/templates/events/events.html
@@ -21,13 +21,13 @@
   <div class="row">
       <!-- Blog Entries Column -->
       <div class="col-md-12 mt-3 left">
-          {% for event in events %}
+          {% for events in events %}
           <div class="card mb-4">
               <div class="card-body">
                   <h3 class="card-title">{{ event.title }}</h3>
-                  <p class="card-text text-muted h6">{{ event.author }} | {{ event.date}} </p>
+                  {% comment %} <p class="card-text text-muted h6">{{ event.author }} | {{ event.date}} </p> {% endcomment %}
                   <p class="card-text">{{event.content|slice:":200"}}....</p>
-                  <a href="{% url 'event-detail' event.id %}" class="btn btn-primary">Read More &rarr;</a>
+                  <a href="{% url 'event_detail' event.id %}" class="btn btn-primary">Read More &rarr;</a>
               </div>
           </div>
           {% endfor %}
