--- a/events/templates/events/events.html
+++ b/events/templates/events/events.html
@@ -21,7 +21,7 @@
   <div class="row">
       <!-- Blog Entries Column -->
       <div class="col-md-12 mt-3 left">
-          {% for events in events %}
+          {% for event in events_list %}
           <div class="card mb-4">
               <div class="card-body">
                   <h3 class="card-title">{{ event.title }}</h3>
