--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'blog-home' %}">Home</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'events-events' %}">Events</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'events_list' %}">Events</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'blog-about' %}">Articles</a></li>
                     {% if user.is_authenticated %}
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'post-create' %}">New Post</a></li>
