added vivaan and other changes

--- a/lit/blog/templates/blog/about.html
+++ b/lit/blog/templates/blog/about.html
@@ -5,7 +5,6 @@
   .container {
       font-family: "Roboto", sans-serif;
       font-size: 18px;
-      background-image: url("blog/static/images/books.jpg") repeat;
   }
   
   .head_text {
@@ -14,6 +13,10 @@
   
   .card {
       box-shadow: 0 16px 48px #E3E7EB;
+      flex-wrap: wrap;
+      box-shadow: 0 16px 48px #E3E7EB;
+      background-color: #11111110;
+      border: none;
   }
 </style>
 
@@ -26,8 +29,8 @@
               <div class="card-body">
                   <h3 class="card-title">{{ post.title }}</h3>
                   <p class="card-text text-muted h6">{{ post.author }} | {{ post.date}} </p>
-                  <p class="card-text">{{post.content|slice:":200"}}....</p>
-                  <a href="{% url 'post-detail' post.id %}" class="btn btn-primary">Read More &rarr;</a>
+                  <p class="card-text text-dark">{{post.content|slice:":200"}}....</p>
+                  <a href="{% url 'post-detail' post.id %}" class="btn btn-link">Read More &rarr;</a>
               </div>
           </div>
           {% endfor %}
