--- a/lit/blog/templates/blog/base.html
+++ b/lit/blog/templates/blog/base.html
@@ -16,9 +16,15 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="{% static 'blog/main.css' %}">
 </head>
+<style>
+  body {
+    background-image: url('/static/images/bg.jpg');
+    background-repeat: repeat;
+  }
+</style>
 <body id="page-top">
   <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="sideNav" style="background-color: #bd5d38;">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="sideNav" style="background-image: url('/static/images/bkm2.png'); background-repeat: no-repeat; background-size: 100% 85%;";>
             <a class="navbar-brand js-scroll-trigger" href="{% url 'blog-home' %}">
                 <span class="d-block d-lg-none">Writing Club</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="{% static 'images/litsoc.jpeg' %}" alt="" /></span>
@@ -27,8 +33,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'blog-home' %}">Home</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'events-events' %}">Events</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'events_list' %}">Events</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'blog-about' %}">Articles</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'mags_list' %}">Vivaan</a></li>
                     {% if user.is_authenticated %}
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'post-create' %}">New Post</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'logout' %}">Logout</a></li>
