--- a/lit/blog/templates/blog/home.html
+++ b/lit/blog/templates/blog/home.html
@@ -4,26 +4,22 @@
 <!-- About-->
 <section class="resume-section" id="about">
     <div class="resume-section-content">
-        <h1 class="mb-0">
-            WRITING CLUB,
-            <span class="text-primary"> IIT MANDI</span>
-        </h1>
-        <div class="subheading mb-5">
-            On the banks of Uhl!
-            <a href="mailto:writing_club@students.iitmandi.ac.in">writing_club@students.iitmandi.ac.in</a>
-        </div>
-        <p class="lead mb-5">
+        <h1 class="mb-0">WRITING CLUB,</h1>
+        <h1 class="text-primary"> IIT MANDI</span></h1>
+        <div class="subheading lead mb-5">On the banks of Uhl!</div>
+        <p class="lead mb-5 text-dark">
             We’ve arrived at the land of magic, <br>
             Where guilds take on quests<br>
-            To defeat demons in the dungeons with spears of words<br>
+            To defeat demons in the dungeons with spears of words;<br>
             Where knights are armed with pens,<br>
-            And the wizards call their wands quills.<br>
-            Where bouts and duels are contests of pencraft<br>
+            And the wizards call their wands quills;<br>
+            Where bouts and duels are contests of pencraft,<br>
             And the warriors compete for the title of the best penman.<br>
         </p>
         <div class="social-icons">
             <a class="social-icon" href="https://www.instagram.com/litcouncil_iitmandi/"><i class="fab fa-instagram"></i></a>
             <a class="social-icon" href="https://www.facebook.com/literarysocietyiitmandi"><i class="fab fa-facebook-f"></i></a>
+            <a class="social-icon" href="mailto:writing_club@students.iitmandi.ac.in"><i class="fas fa-envelope"></i></a>
         </div>
     </div>
 </section>
