--- a/lit/blog/templates/blog/post_detail.html
+++ b/lit/blog/templates/blog/post_detail.html
@@ -1,12 +1,19 @@
 {%extends "blog/base.html" %}
 {% block content %}
+<style>
+  #post {
+      box-shadow: 0 16px 48px #E3E7EB;
+      background-color: #11111110;
+      border: none;
+  }
+</style>
 <div class="container">
   <div class="row">
-    <div class="col-md-12 card mb-5  mt-5 left  top">
+    <div class="col-md-12 card mb-5  mt-5 left top" id="post">
       <div class="card-body">
-        <h2>{% block title %} {{ object.title }} {% endblock title %}</h2>
+        <h2 class="text-primary">{% block title %} {{ object.title }} {% endblock title %}</h2>
         <p class=" text-muted">{{ post.author }} | {{ post.date }}</p>
-        <p class="card-text ">{{ object.content | safe }}</p>
+        <p class="card-text ">{{ object.content | linebreaks }}</p>
       </div>
       {% if post.author == user %}
             <div>
