--- a/lit/events/templates/events/events.html
+++ b/lit/events/templates/events/events.html
@@ -5,7 +5,6 @@
   .container {
       font-family: "Roboto", sans-serif;
       font-size: 18px;
-      background-image: url("blog/static/images/books.jpg") repeat;
   }
   
   .head_text {
@@ -13,27 +12,29 @@
   }
   
   .card {
+      display: flex;
+      flex-wrap: wrap;
       box-shadow: 0 16px 48px #E3E7EB;
+      background-color: #11111110;
+      border: none;
   }
 </style>
-
 <div class="container">
   <div class="row">
       <!-- Blog Entries Column -->
-      <div class="col-md-12 mt-3 left">
-          {% for events in events %}
+      
+          {% for event in events_list %}
+          <div class="col-md-6 mt-3 mx-auto">
           <div class="card mb-4">
               <div class="card-body">
-                  <h3 class="card-title">{{ event.title }}</h3>
-                  {% comment %} <p class="card-text text-muted h6">{{ event.author }} | {{ event.date}} </p> {% endcomment %}
-                  <p class="card-text">{{event.content|slice:":200"}}....</p>
-                  <a href="{% url 'event_detail' event.id %}" class="btn btn-primary">Read More &rarr;</a>
+                <a href="{% url 'event_detail' event.id %}"><h3 class="card-title text-primary text-center">{{ event.title }}</h3></a>
+                <h4 class="flex-shrink-0 text-center"><span>{{event.date}}</span></h4>
+                <img src = {{ event.image.url }} width="70%" height="auto" class="mx-auto d-block">
               </div>
           </div>
+          </div>
           {% endfor %}
-      </div>
+      
   </div>
 </div>
 {% endblock content %}
-
-{% comment %} <p>hellllllllllloooooo</p> {% endcomment %}
