--- a/lit/litsoc/templates/litsoc/home.html
+++ b/lit/litsoc/templates/litsoc/home.html
@@ -18,7 +18,7 @@
 </head>
 <style>
   body {
-    background-image: url('/static/images/mainpage/m1.png');
+    background-image: url('/static/images/m1.png');
     background-repeat: no-repeat;
     background-size: cover;
   }
