--- a/lit/litsoc/templates/litsoc/mainteam.html
+++ b/lit/litsoc/templates/litsoc/mainteam.html
@@ -7,7 +7,6 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
   <title>LitSoc</title>
-  <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
   <!-- Font Awesome icons (free version)-->
   <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
   <!-- Google fonts-->
@@ -80,7 +79,7 @@ a.github-profile {
 </style>
 <body id="page-top">
   <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="sideNav" style="background-image: url('/static/images/bkm3.png'); background-repeat: no-repeat; background-size: 100% 100%;">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="sideNav" style="background-image: url({% static 'images/bkm3.png' %}); background-repeat: no-repeat; background-size: 100% 100%;">
             <a class="navbar-brand js-scroll-trigger" href="{% url 'litsoc-home' %}">
                 <span class="d-block d-lg-none">Literary Society</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="{% static 'images/litsoc.jpeg' %}" alt="" /></span>
@@ -172,7 +171,6 @@ a.github-profile {
 <!-- Third party plugin JS-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
 <!-- Core theme JS-->
-<script src="js/scripts.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
