--- a/lit/quizzing/templates/quizzing/team.html
+++ b/lit/quizzing/templates/quizzing/team.html
@@ -18,7 +18,7 @@
 </head>
 <style>
   body {
-    background-image: url('/static/images/quiz_bg.jpg');
+    background-image: url({% static 'images/quiz_bg.jpg' %});
     background-repeat: repeat;
     height: 100%;
     background-size: cover;
@@ -27,7 +27,7 @@
 </style>
 <body id="page-top">
   <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="sideNav" style="background-image: url('/static/images/qnav.jpg'); background-repeat: no-repeat; background-size: 100% 100%;";>
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="sideNav" style="background-image: url({% static 'images/qnav.jpg' %}); background-repeat: no-repeat; background-size: 100% 100%;";>
             <a class="navbar-brand js-scroll-trigger" href="{% url 'litsoc-home' %}">
                 <span class="d-block d-lg-none text-white">Quizzing Club</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="{% static 'images/litsoc.jpeg' %}" alt="" /></span>
