--- a/lit/litsoc/templates/litsoc/home.html
+++ b/lit/litsoc/templates/litsoc/home.html
@@ -16,67 +16,52 @@
   <link rel="stylesheet" type="text/css" href="{% static 'blog/main.css' %}">
 </head>
 <style>
-  body {
-    background-image: url({% static 'images/m1.png' %});
-    background-repeat: no-repeat;
-    background-size: cover;
+  html, body, div {height:100%;}
+  .col-md-4 {
+      float:left;
+      width:33.333333333%;
+      background-size:cover;
   }
-
-
-  .button-primary:hover {
-    color: #c0ca33;
-    text-decoration: none;
+  .fill-hotel{
+      height:100%;
+      min-height:100%;
+      background-image: url('static/images/1.jpg');
+      background-repeat: no-repeat;
+      background-position: center center; 
+      background-color: #000000;
   }
-  .button-primary:hover::after {
-    opacity: 1;
-    -webkit-transform: scaleX(1);
-    -ms-transform: scaleX(1);
-    transform: scaleX(1);
+  .fill-res {
+      height:100%;
+      min-height:100%;
+      background-image: url('static/images/2.jpg');
+      background-repeat: no-repeat;
+      background-position: center center; 
+      background-color: #000000;
   }
-  .navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
-    color: #fff;
+  .fill-wein {
+      height:100%;
+      min-height:100%;
+      background-image: url('static/images/3.jpg');
+      background-repeat: no-repeat;
+      background-position: center center; 
+      background-color: #000000;
   }
-
-
 
 </style>
-<body id="page-top">
-  <!-- Navigation-->
-        {% comment %} <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="sideNav" style="background-image: url({% static 'images/bkm2.png' %}); background-repeat: no-repeat; background-size: 100% 85%;";>
-            <a class="navbar-brand js-scroll-trigger" href="{% url 'blog-home' %}">
-                <span class="d-block d-lg-none">Writing Club</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="{% static 'images/litsoc.jpeg' %}" alt="" /></span>
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'litsoc-home' %}">Main-page</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'blog-home' %}">Writing</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'debate-home' %}">Debate</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'quiz-home' %}">Quiz</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'blog-home' %}">Home</a></li>
-                </ul>
-            </div>
-        </nav> {% endcomment %}
-{% comment %} yha tak navigation h {% endcomment %}
+<body>
 
-        {% comment %} <div>hello??????????????????????????????????</div> {% endcomment %}
-
-
-
-
-<header class="header-area overlay">
+<!-- <header class="header-area overlay">
     <nav class="navbar navbar-expand-md navbar-dark">
 		<div class="container">
-			<a href="{% url 'litsoc-home' %}" class="navbar-brand">Literary Society, IIT Mandi</a>
+			<a href="{% url 'litsoc-home' %}" class="navbar-brand">Literary Society, IIT Mandi</a> -->
 			
-			<button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#main-nav">
+			<!-- <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#main-nav">
 				<span class="menu-icon-bar"></span>
 				<span class="menu-icon-bar"></span>
 				<span class="menu-icon-bar"></span>
-			</button>
+			</button> -->
 			
-			<div id="main-nav" class="collapse navbar-collapse">
+			<!-- <div id="main-nav" class="collapse navbar-collapse">
 				<ul class="navbar-nav ml-auto">
 					<li><a href="{% url 'blog-home' %}" class="nav-item nav-link active">WRITING CLUB</a></li>
 					<li><a href="{% url 'debating-home' %}" class="nav-item nav-link">DEBATING CLUB</a></li>
@@ -86,9 +71,41 @@
 					</li>
           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'mags_list' %}">VIVAAN</a></li>
 				</ul>
-			</div>
-		</div>
-	</nav>
+			</div> -->
+      <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="sideNav" style="background-image: url({% static 'images/bkm3.png' %}); background-repeat: no-repeat; background-size: 100% 100%;";>
+        <a class="navbar-brand js-scroll-trigger" href="{% url 'litsoc-home' %}">
+            <span class="d-block d-lg-none">Writing Club</span>
+            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="{% static 'images/litsoc.jpeg' %}" alt="" /></span>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'blog-home' %}">WRITING CLUB</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'debating-home' %}">DEBATING CLUB</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'quiz-home' %}">QUIZZING CLUB</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'litsoc-team' %}">TEAM</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'mags_list' %}">VIVAAN</a></li>
+                <!-- {% if user.is_authenticated %}
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'post-create' %}">New Post</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'logout' %}">Logout</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'profile' %}">Profile</a></li>
+                {% else %}
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'login' %}">Login</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'register' %}">Register</a></li>
+                {% endif %} -->
+            </ul>
+        </div>
+    </nav>
+
+
+
+      <div class="row intro-div no-gutters">
+        <div class="col-md-4 fill-res"><a href="{% url 'blog-home' %}"><img src="{% static 'images/11.png' %}" alt="An image"></a></div>
+        <div class="col-md-4 fill-wein"><a href="{% url 'debating-home' %}"><img src="{% static 'images/31.png' %}" alt="An image"></a></div>
+        <div class="col-md-4 fill-hotel"><a href="{% url 'quiz-home' %}"><img src="{% static 'images/21.png' %}" alt="An image"></a></div>
+    </div>
+		<!-- </div> -->
+	<!-- </nav> -->
 <main>
 </main>
 
