--- a/lit/litsoc/templates/litsoc/home.html
+++ b/lit/litsoc/templates/litsoc/home.html
@@ -1,137 +1,138 @@
 {% load static %}
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
-  <title>LitSoc</title>
-  <!-- Font Awesome icons (free version)-->
-  <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
-  <!-- Google fonts-->
-  <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
-  <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="{% static 'blog/main.css' %}">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>nhi-aata</title>
 </head>
 <style>
-  html, body, div {height:100%;}
-  .col-md-4 {
-      float:left;
-      width:33.333333333%;
-      background-size:cover;
-  }
-  .fill-hotel{
-      height:100%;
-      min-height:100%;
-      background-image: url('static/images/1.jpg');
-      background-repeat: no-repeat;
-      background-position: center center; 
-      background-color: #000000;
-  }
-  .fill-res {
-      height:100%;
-      min-height:100%;
-      background-image: url('static/images/2.jpg');
-      background-repeat: no-repeat;
-      background-position: center center; 
-      background-color: #000000;
-  }
-  .fill-wein {
-      height:100%;
-      min-height:100%;
-      background-image: url('static/images/3.jpg');
-      background-repeat: no-repeat;
-      background-position: center center; 
-      background-color: #000000;
-  }
-
-</style>
+    * {
+      box-sizing: border-box;
+    }
+    /* Create four equal columns that floats next to each other */
+    body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    }
+    
+    .topnav {
+    overflow: hidden;
+    background-color: #BD5800;
+    }
+    
+    .topnav a {
+      float: left;
+      display: block;
+      color: #f2f2f2;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
+    }
+    
+    .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+    }
+    
+    .topnav a.active {
+    background-color: #E21718;
+    color: white;
+    }
+    
+    .topnav .icon {
+    display: none;
+    }
+/* till here we have navigation waala styling */
+    .column {
+      float: left;
+      {% comment %} border: 1px solid blue; {% endcomment %}
+      width: 33.33%;
+      height: 100%;
+    }
+    
+    /* Clear floats after the columns */
+    .row:after {
+      content: "";
+      display: table;
+      clear: both;
+    }
+    
+    /* On screens that are 992px wide or less, go from four columns to two columns */
+    @media screen and (max-width: 992px) {
+      .column {
+        width: 50%;
+      }
+    }
+    
+    /* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
+    @media screen and (max-width: 600px) {
+      .column {
+        width: 100%;
+      }
+    }
+/* yha se styling of navbar shuru hai */
+    @media screen and (max-width: 600px) {
+        .topnav a:not(:first-child) {display: none;}
+        .topnav a.icon {
+          float: right;
+          display: block;
+        }
+      }
+      
+      @media screen and (max-width: 600px) {
+        .topnav.responsive {position: relative;}
+        .topnav.responsive .icon {
+          position: absolute;
+          right: 0;
+          top: 0;
+        }
+        .topnav.responsive a {
+          float: none;
+          display: block;
+          text-align: left;
+        }
+    }
+    </style>
 <body>
-
-<!-- <header class="header-area overlay">
-    <nav class="navbar navbar-expand-md navbar-dark">
-		<div class="container">
-			<a href="{% url 'litsoc-home' %}" class="navbar-brand">Literary Society, IIT Mandi</a> -->
-			
-			<!-- <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#main-nav">
-				<span class="menu-icon-bar"></span>
-				<span class="menu-icon-bar"></span>
-				<span class="menu-icon-bar"></span>
-			</button> -->
-			
-			<!-- <div id="main-nav" class="collapse navbar-collapse">
-				<ul class="navbar-nav ml-auto">
-					<li><a href="{% url 'blog-home' %}" class="nav-item nav-link active">WRITING CLUB</a></li>
-					<li><a href="{% url 'debating-home' %}" class="nav-item nav-link">DEBATING CLUB</a></li>
-					<li></li><a href="{% url 'quiz-home' %}" class="nav-item nav-link">QUIZZING CLUB</a></li>
-          <a href="{% url 'litsoc-team' %}" class="nav-item nav-link">TEAM</a>
-					<li class="dropdown">
-					</li>
-          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'mags_list' %}">VIVAAN</a></li>
-				</ul>
-			</div> -->
-      <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="sideNav" style="background-image: url({% static 'images/bkm3.png' %}); background-repeat: no-repeat; background-size: 100% 100%;";>
-        <a class="navbar-brand js-scroll-trigger" href="{% url 'litsoc-home' %}">
-            <span class="d-block d-lg-none">Writing Club</span>
-            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="{% static 'images/litsoc.jpeg' %}" alt="" /></span>
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'blog-home' %}">WRITING CLUB</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'debating-home' %}">DEBATING CLUB</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'quiz-home' %}">QUIZZING CLUB</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'litsoc-team' %}">TEAM</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'mags_list' %}">VIVAAN</a></li>
-                <!-- {% if user.is_authenticated %}
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'post-create' %}">New Post</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'logout' %}">Logout</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'profile' %}">Profile</a></li>
-                {% else %}
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'login' %}">Login</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'register' %}">Register</a></li>
-                {% endif %} -->
-            </ul>
-        </div>
-    </nav>
-
-
-
-      <div class="row intro-div no-gutters">
-        <div class="col-md-4 fill-res"><a href="{% url 'blog-home' %}"><img src="{% static 'images/11.png' %}" alt="An image"></a></div>
-        <div class="col-md-4 fill-wein"><a href="{% url 'debating-home' %}"><img src="{% static 'images/31.png' %}" alt="An image"></a></div>
-        <div class="col-md-4 fill-hotel"><a href="{% url 'quiz-home' %}"><img src="{% static 'images/21.png' %}" alt="An image"></a></div>
+    <div>
+        <div class="topnav" id="myTopnav">
+            <a href="{% url 'litsoc-team' %}" class="active">Team</a>
+            <a href="{% url 'quiz-home' %}">Quizzing</a>
+            <a href="{% url 'blog-home' %}">Writing</a>
+            <a href="{% url 'debating-home' %}">Debating</a>
+            <a href="{% url 'mags_list' %}">Vivaan</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+              <i class="fa fa-bars"></i>
+            </a>
+          </div>
     </div>
-		<!-- </div> -->
-	<!-- </nav> -->
-<main>
-</main>
-
-
-
-
-
-  <div class="container col-md-8">
-    {% if messages %}
-      {% for message in messages %}
-        <div class="alert alert-{{message.tags}}">
-          {{message}}
-        </div>
-      {% endfor %}
-    {% endif %}
-    {% block content %} {% endblock %}
-  </div>
-
-<!-- Bootstrap core JS-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Third party plugin JS-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-<!-- Core theme JS-->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <div>
+        <div class="row">
+            <div class="column" style="background-color:rgb(202, 53, 53);">
+                <a href="{% url 'quiz-home' %}"><img src="{% static 'images/21.png' %}" alt="An image" style="width:100%;height:100%;" ></a>
+            </div>
+            
+            <div class="column" style="background-color:rgb(202, 53, 53);">
+                <a href="{% url 'blog-home' %}"><img src="{% static 'images/11.png' %}" alt="image nhi aaya" style="width:100%;height:100%;" ></a>
+            </div>
+            
+            <div class="column" style="background-color:rgb(103, 255, 89);">
+                <a href="{% url 'debating-home' %}"><img src="{% static 'images/31.png' %}" alt="image nhi aaya" style="width:100%;height:100%;" ></a>
+            </div>
+          </div>
+    </div>
+    <script>
+        function myFunction() {
+          var x = document.getElementById("myTopnav");
+          if (x.className === "topnav") {
+            x.className += " responsive";
+          } else {
+            x.className = "topnav";
+          }
+        }
+    </script>   
 </body>
 </html>
