--- a/lit/litsoc/templates/litsoc/home.html
+++ b/lit/litsoc/templates/litsoc/home.html
@@ -124,15 +124,15 @@
     </div>
     <div>
         <div class="row">
-            <div class="column" style="background-color:rgb(202, 53, 53);">
+            <div class="column" style="background-color:rgb(255,255,255);">
                 <a href="{% url 'quiz-home' %}"><img src="{% static 'images/21.png' %}" alt="An image" style="width:100%;height:100%;" ></a>
             </div>
             
-            <div class="column" style="background-color:rgb(202, 53, 53);">
+            <div class="column" style="background-color:rgb(255,255,255);">
                 <a href="{% url 'blog-home' %}"><img src="{% static 'images/11.png' %}" alt="An image" style="width:100%;height:100%;" ></a>
             </div>
             
-            <div class="column" style="background-color:rgb(103, 255, 89);">
+            <div class="column" style="background-color:rgb255,255,255);">
                 <a href="{% url 'debating-home' %}"><img src="{% static 'images/31.png' %}" alt="An image" style="width:100%;height:100%;" ></a>
             </div>
           </div>
