--- a/lit/litsoc/templates/litsoc/home.html
+++ b/lit/litsoc/templates/litsoc/home.html
@@ -33,6 +33,7 @@
     .topnav {
     overflow: hidden;
     background-color: #BD5800;
+    {% comment %} position: fixed; {% endcomment %}
     }
     
     .topnav a {
@@ -125,11 +126,11 @@
     <div>
         <div class="row">
             <div class="column" style="background-color:rgb(255,255,255);">
-                <a href="{% url 'quiz-home' %}"><img src="{% static 'images/21.png' %}" alt="An image" style="width:100%;height:100%;" ></a>
+                <a href="{% url 'blog-home' %}"><img src="{% static 'images/11.png' %}" alt="An image" style="width:100%;height:100%;" ></a>
             </div>
             
             <div class="column" style="background-color:rgb(255,255,255);">
-                <a href="{% url 'blog-home' %}"><img src="{% static 'images/11.png' %}" alt="An image" style="width:100%;height:100%;" ></a>
+                <a href="{% url 'quiz-home' %}"><img src="{% static 'images/21.png' %}" alt="An image" style="width:100%;height:100%;" ></a>
             </div>
             
             <div class="column" style="background-color:rgb255,255,255);">
